--- a/projects/boston_housing/report.html
+++ b/projects/boston_housing/report.html
@@ -11779,7 +11779,7 @@ div#notebook {
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[7]:</div>
+<div class="prompt input_prompt">In&nbsp;[16]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="c1"># Import libraries necessary for this project</span>
@@ -11962,7 +11962,7 @@ I expect that a house with high RM value would worth more than a house with less
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[9]:</div>
+<div class="prompt input_prompt">In&nbsp;[17]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="c1"># TODO: Import &#39;r2_score&#39;</span>
@@ -12086,7 +12086,7 @@ I expect that a house with high RM value would worth more than a house with less
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[11]:</div>
+<div class="prompt input_prompt">In&nbsp;[18]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="c1"># TODO: Import &#39;train_test_split&#39;</span>
@@ -13842,7 +13842,8 @@ YII=
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>Answer: </strong> I would choose the model with maximum depth of 3. As the model with maximum depth of 1 suffers from high bias and the model with maximum depth of 4 and 5 suffer from high variance. Adding more training ponts to the model with maximum depth of 3 would not provide any significant benefit but would help the models that suffer from high variance.</p>
+<p><strong>Answer: </strong> I would choose the model with maximum depth of 3. As the model with maximum depth of 1 suffers from high bias and the model with maximum depth of 4 and 5 suffer from high variance. 
+Adding more training ponts would make training score to decrease slightly and make testing score increase slightly as both scores will get closer. Adding more training ponts to the model would not provide any significant benefit to the model.</p>
 
 </div>
 </div>
